--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,39 +8,41 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* header styles */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
-/* Changed "div" to "nav" */
-.header nav {
+
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-/* Changed "div" to "nav" */
-.header nav ul {
+
+header nav ul {
     list-style-type: none;
 }
-/* Changed "div" to "nav" */
-.header nav ul li {
+
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/* text styles */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -59,6 +61,7 @@ p {
     background-position: center;
 }
 
+/* floats */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,12 +72,14 @@ p {
     margin-left: 25px;
 }
 
-.content {
+/* main section */
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* benefits section */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -134,7 +139,7 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+.services {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -143,58 +148,23 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.services img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.services h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {
+/* footer styles */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-/* Changed "h2" to "h4" */
-.footer h4 {
+
+footer h4 {
     font-size: 20px;
 }
